...
    tools:context=".MainFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:labelFor="@+id/schedule_name"
        android:text="@string/NEW_SCHEDULE__SCHEDULE_NAME_LABEL"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/schedule_name"
        android:layout_width="match_parent"
...

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/checkbox_on_background" />

...
